# py-crud-sqlalchemy

./: README.md  exemplo_01.py  meudb.db  pyproject.toml
estudo/: desafio.db  desafio.py
