[tool.poetry]
name = "py-crud-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Philip Martins <philip.martt@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
